feat(shared): introduce shared bounded context with JWT security, outbox relay, and cross-module API contracts